agghar to run from code

--- a/CGE_regional_extension.ipynb
+++ b/CGE_regional_extension.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,13 @@
     "from harpy.header_array import HeaderArrayObj as HAO\n",
     "\n",
     "import dataGetterFunction as dgf\n",
-    "import harWriterFunction  as hwf\n",
+    "import harWriterFunction as hwf\n",
     "import checkerFunctions as cfs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +54,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "### Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hwf.aggHAR(harFolder, \"basedata64.har\", \"basedata30.har\", \"AGGSUP3.har\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output and employment by region query OK\n",
+      "Households' transactions by region query OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Define regional data location:\n",
     "urlDict = {\n",
@@ -69,9 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['WHOLE COUNTRY', 'Uusimaa', 'Varsinais-Suomi', 'Satakunta', 'Kanta-Häme', 'Pirkanmaa', 'Päijät-Häme', 'Kymenlaakso', 'South Karelia', 'Etelä-Savo', 'Pohjois-Savo', 'North Karelia', 'Central Finland', 'South Ostrobothnia', 'Ostrobothnia', 'Central Ostrobothnia', 'North Ostrobothnia', 'Kainuu', 'Lapland', 'Åland', 'Extra-regio territory']\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the available regions from regional accounts:\n",
     "print([x[\"valueTexts\"] for x in dgf.getParams(\"kan/altp/statfin_altp_pxt_008.px\", \"kunnat\") if x[\"code\"] == \"Alue\"][0])"
@@ -79,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,9 +216,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check that industries in the aggregated basedata match with the regional data:\n",
     "set(regOutput.Industry) == set(regInd)"
@@ -205,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,9 +396,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R001\n",
+      "No negative values\n",
+      "R002\n",
+      "Negative values in [('I_16', 'Pohjanmaa', -2.2), ('I_17_18', 'VarsinSuomi', -0.3), ('I_17_18', 'EtelaSavo', -0.1), ('I_29_30', 'Satakunta', -8.3), ('I_31_33', 'PaijatHame', -0.9), ('I_45_47', 'KeskiPohjanm', -5.9)]\n",
+      "R003\n",
+      "No negative values\n",
+      "R004\n",
+      "No negative values\n",
+      "R005\n",
+      "No negative values\n",
+      "R006\n",
+      "Negative values in [('C_16', 'Pohjanmaa', -2.2), ('C_17_18', 'VarsinSuomi', -0.3), ('C_17_18', 'EtelaSavo', -0.1), ('C_29_30', 'Satakunta', -8.3), ('C_31_33', 'PaijatHame', -0.9), ('C_45_47', 'KeskiPohjanm', -5.9)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check that negative values don't exist.\n",
     "# If they do, the next step will set them to zero. Then, re-run this block, and the next.\n",
@@ -363,9 +428,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R002 I_16 Pohjanmaa was set to zero!\n",
+      "R002 I_17_18 VarsinSuomi was set to zero!\n",
+      "R002 I_17_18 EtelaSavo was set to zero!\n",
+      "R002 I_29_30 Satakunta was set to zero!\n",
+      "R002 I_31_33 PaijatHame was set to zero!\n",
+      "R002 I_45_47 KeskiPohjanm was set to zero!\n",
+      "R006 C_16 Pohjanmaa was set to zero!\n",
+      "R006 C_17_18 VarsinSuomi was set to zero!\n",
+      "R006 C_17_18 EtelaSavo was set to zero!\n",
+      "R006 C_29_30 Satakunta was set to zero!\n",
+      "R006 C_31_33 PaijatHame was set to zero!\n",
+      "R006 C_45_47 KeskiPohjanm was set to zero!\n"
+     ]
+    }
+   ],
    "source": [
     "# Set negative values for zero. Check that the values are small!!\n",
     "flag = True\n",
@@ -383,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,9 +487,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R001\n",
+      "No nan values\n",
+      "R002\n",
+      "No nan values\n",
+      "R003\n",
+      "No nan values\n",
+      "R004\n",
+      "No nan values\n",
+      "R005\n",
+      "No nan values\n",
+      "R006\n",
+      "No nan values\n"
+     ]
+    }
+   ],
    "source": [
     "# Check that NAN values don't exist:\n",
     "for x in regShares:\n",
@@ -422,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
